@@ -10,6 +10,8 @@ requests-empty=Requests empty
 
 [mod-setting-name]
 fh-set-filter-on-inserter=Enable filters when setting filter for inserter
+fh-default-item-on-splitter=Set an item to always show on splitters
 
 [mod-setting-description]
 fh-set-filter-on-inserter=Enables the "Use filters" checkbox when setting a filter to an inserter
+fh-default-item-on-splitter=Name of an item to always show on splitters e.g. deconstruction-planner. Leave empty to disable.
