@@ -6,4 +6,13 @@ data:extend {
         default_value = true,
         order = "a",
     },
+    {
+        type = "string-setting",
+        name = "fh-default-item-on-splitter",
+        allow_blank = true,
+        auto_trim = true,
+        setting_type = "runtime-global",
+        default_value = "deconstruction-planner",
+        order = "b",
+    },
 }
