@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.17
 Date: ????
+  Changes:
+    - Added support for default item to show on splitters
   Bugfixes:
     - Fixed crash when setting "Full chest" request on ghost logistic containers
   Fixes:
